model and controller changes
