# config/swagger/swagger_output.json
@@ -122,6 +122,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "stu_id": {
+                  "example": "any"
+                },
                 "name": {
                   "example": "any"
                 },
@@ -397,7 +400,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "ph_num": {
+                "phone": {
                   "example": "any"
                 }
               }
@@ -659,6 +662,69 @@
           },
           "400": {
             "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/v1/contactus/contactUs": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Name": {
+                  "example": "any"
+                },
+                "Your_email": {
+                  "example": "any"
+                },
+                "School_Name": {
+                  "example": "any"
+                },
+                "Contact_Number": {
+                  "example": "any"
+                },
+                "City": {
+                  "example": "any"
+                },
+                "Education_board": {
+                  "example": "any"
+                },
+                "NoOfStudent_in_6to12": {
+                  "example": "any"
+                },
+                "Your_message": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
